GEnerate recipes based on ingredients, save recipes, create cuisines functionalities
